# azure_kinect_3d

./: .gitignore  pyproject.toml
input/: seg_20260331_113525_mask.npy
src/azure_kinect_3d/: app.py  camera.py  deploy.py  reconstruction.py  segmentor.py
